// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`changes the class when hovered 1`] = `
<a
  className="normal"
  href="https://time.gov"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Time
</a>
`;

exports[`changes the class when hovered 2`] = `
<a
  className="hovered"
  href="https://time.gov"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Time
</a>
`;

exports[`changes the class when hovered 3`] = `
<a
  className="normal"
  href="https://time.gov"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Time
</a>
`;
